welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:46: error: not found: value faireDiadD
		faireDiadD(Color.YELLOW);
                ^PatternPicture:47: error: too many arguments for method faireDiagG: (c: java.awt.Color)Unit
		faireDiagG(Color,GREEN);
                          ^PatternPicture:49: error: not found: value faireDiadD
		faireDiadD(Color.YELLOW);
                ^PatternPicture:50: error: too many arguments for method faireDiagG: (c: java.awt.Color)Unit
		faireDiagG(Color,GREEN);
                          ^